--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -22,7 +23,10 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "start": "^5.1.0",
-    "tsc-watch": "^6.0.4"
+    "tsc-watch": "^6.0.4",
+    "typeorm": "^0.3.20"
   }
 }
